getlistfigure ui, detailfigure ui, cart ui

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,3 +1,6 @@
 {
-    "/css/auth.css": "/css/auth.css"
+    "/css/auth.css": "/css/auth.css",
+    "/css/get_list_figure.css": "/css/get_list_figure.css",
+    "/css/get_detail_figure.css": "/css/get_detail_figure.css",
+    "/css/get_list_cart.css": "/css/get_list_cart.css"
 }
