admin role and form manage user

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,7 +1,8 @@
 {
+    "/css/header.css": "/css/header.css",
     "/css/auth.css": "/css/auth.css",
     "/css/get_list_figure.css": "/css/get_list_figure.css",
     "/css/get_detail_figure.css": "/css/get_detail_figure.css",
     "/css/get_list_cart.css": "/css/get_list_cart.css",
-    "/css/header.css": "/css/header.css"
+    "/css/manageUsers.css": "/css/manageUsers.css"
 }
