add image and update img, update figure

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -4,5 +4,6 @@
     "/css/get_list_figure.css": "/css/get_list_figure.css",
     "/css/get_detail_figure.css": "/css/get_detail_figure.css",
     "/css/get_list_cart.css": "/css/get_list_cart.css",
-    "/css/manageUsers.css": "/css/manageUsers.css"
+    "/css/manage_page.css": "/css/manage_page.css",
+    "/css/add_figure.css": "/css/add_figure.css"
 }
