--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -5,5 +5,6 @@
     "/css/get_detail_figure.css": "/css/get_detail_figure.css",
     "/css/get_list_cart.css": "/css/get_list_cart.css",
     "/css/manage_page.css": "/css/manage_page.css",
-    "/css/add_figure.css": "/css/add_figure.css"
+    "/css/add_figure.css": "/css/add_figure.css",
+    "/css/edit_profile.css": "/css/edit_profile.css"
 }
