--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=weepoo_shop
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:SfSs2knldjdN65S62GFEAZmXIrVYSEijcFgxIm3G9aQ=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -29,12 +29,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailpit
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME="huydinhvan132@gmail.com"
+MAIL_PASSWORD='jfbq zfov kdcu ziog'
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS="huydinhvan132@gmail.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
