--- a/.env.example
+++ b/.env.example
@@ -31,10 +31,10 @@ REDIS_PORT=6379
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
-MAIL_USERNAME=""
-MAIL_PASSWORD=''
+MAIL_USERNAME="ricenguyen2310@gmail.com"
+MAIL_PASSWORD='quim yvfb wrok imxk'
 MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS=""
+MAIL_FROM_ADDRESS="ricenguyen2310@gmail.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
@@ -56,3 +56,11 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+GOOGLE_CLIENT_ID="111738010464-c9jcp7o6slq09ietboh7jfrh5ffcnnpj.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET="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"
+GOOGLE_REDIRECT="http://localhost:8000/api/google/callback"
+
+FACEBOOK_APP_ID = "1509750986236152"
+FACEBOOK_APP_SECRET = "536f0a1ea385518b2c02fb990f7c30ba"
+FACEBOOK_REDIRECT = "http://localhost:8000/api/facebook/callback"
